# NeuroResearch-AI

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: research_examples.py
neuroresearch_ai/: __init__.py  cli.py  core.py
tests/: test_core.py
