[project]
name = "neuroresearch-ai"
version = "1.0.0"
description = "Advanced Multi-Agent Research System with Self-Improving Methodologies and Cross-Domain Knowledge Integration"
authors = [
  { name = "Sung Hun Kwag", email = "sunghunkwag@gmail.com" },
]
maintainers = [
  { name = "Sung Hun Kwag", email = "sunghunkwag@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "artificial-intelligence",
    "multi-agent-system", 
    "research-automation",
    "machine-learning",
    "langgraph",
    "scientific-research",
    "meta-learning",
    "cross-domain-synthesis"
]
dependencies = [
    "langgraph>=0.3.25",
    "langchain-core>=0.3.12",
    "langchain-openai>=0.3.12",
    "langchain-anthropic>=0.3.10",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.0.0",
    "asyncio",
    "aiofiles>=24.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "networkx>=3.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "arxiv>=2.1.0",
    "scholarly>=1.7.11",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "jsonschema>=4.19.0",
]

[project.urls]
Homepage = "https://github.com/sunghunkwag/NeuroResearch-AI"
Documentation = "https://github.com/sunghunkwag/NeuroResearch-AI/wiki"
Repository = "https://github.com/sunghunkwag/NeuroResearch-AI"
Issues = "https://github.com/sunghunkwag/NeuroResearch-AI/issues"

[project.scripts]
neuroresearch = "neuroresearch_ai.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=neuroresearch_ai --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"